--- a/package.json
+++ b/package.json
@@ -41,5 +41,8 @@
   "main": "index.js",
   "keywords": [],
   "author": "YOUR_NAME <YOUR_EMAIL>",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "prop-types": "^15.8.1"
+  }
 }
